Stopped navbar exploding on smallish (< 1200px, > 900px wide) screens

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -2736,3 +2736,13 @@ span.divider {
   right: -8px;
   top: -40px;
 }
+
+/* Make navigation tabs smaller on small screens so everything doesn't explode */
+@media (min-width: 768px) and (max-width: 1200px) {
+
+    .navbar-nav > li > a {
+        padding: 15px 9px;
+        font-size: 90%;
+    }
+
+}
